--- a/page_templates/comments_page_template.ipynb
+++ b/page_templates/comments_page_template.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90faf98e",
    "metadata": {},
@@ -11,6 +12,8 @@
     "{{Marker 2}}\n",
     "\n",
     "{{Notebook}}\n",
+    "\n",
+    "{{Additional notes}}\n",
     "\n",
     "{{App}}\n",
     "\n",
@@ -40,7 +43,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
